<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreeSth</string>
    <string name="title_activity_write_post">New Post</string>
    <string name="title_activity_list_post">All Posts</string>
    <string name="title_activity_list_author_post">Author Posts</string>
    <string name="title_activity_favorite_post">Favorite Posts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view_post">View Post</string>
    <string name="title_activity_edit_post">Edit Post</string>
    <string name="title_activity_list_search_result">Search Result</string>
    <string name="itemDesc">Describe your item</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New Post</string>
    <string name="action_search">Search</string>
    <string name="action_my_post">My Posts</string>
    <string name="action_my_favorite">Favorite Posts</string>
    <string name="action_follow">Follow</string>
    <string name="action_save">Save</string>
    <string name="title_section1">For Free</string>
    <string name="title_section2">For Sale</string>
    <string name="title_section3">Wanted</string>
    <string name="tab1_listAuthorPost">Posts</string>
    <string name="tab2_listAuthorPost">Follows</string>
    <string name="tab3_listAuthorPost">Trades</string>
    <string name="add_new_photo">Add a new photo</string>

    <string-array name="status_array">
        <item>Open</item>
        <item>Closed</item>
        <item>Completed</item>
    </string-array>
    <string-array name="cat1_array">
        <item>梳化 Sofa</item>
        <item>床褥 Mattress</item>
        <item>床架 Bed Frame</item>
        <item>凳 Chair</item>
        <item>檯 Table</item>
        <item>家電 Home Appliance</item>
        <item>茶几 Coffee Table</item>
        <item>其他 Others</item>
    </string-array>

    <string name="wanted">Wanted</string>
    <string name="sale">Sell</string>
    <string name="free">Free</string>

</resources>